# quon

./: .gitignore  .quonlint.toml  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  SPEC.md  clippy.toml  devbox.json  quonlint-baseline.toml  quonlint.toml
backend/: Cargo.toml
backend/fuzz/: Cargo.toml
backend/fuzz/fuzz_targets/: fuzz_connectivity.rs  fuzz_json_loader.rs
backend/src/: decompose.rs  descriptor.rs  error.rs  gates.rs  generic_openqasm.rs  json.rs  keys.rs  lib.rs  target.rs  unitary.rs
backend/tests/: audit_descriptor.rs  audit_gates.rs  audit_keys.rs  e2e_json.rs  props.rs  target.rs  workspace.rs
backend/tests/fixtures/: device_5q.json  device_bad_edge.json  device_linear_chain.json  device_missing_native_gates.json  device_missing_num_qubits.json  device_no_entangler.json
flux_verify/: Cargo.toml
flux_verify/src/: lib.rs
frontend/: Cargo.toml
frontend/examples/: circ_lower.rs
frontend/fuzz/: Cargo.toml  README.md
frontend/fuzz/fuzz_targets/: fuzz_lex.rs  fuzz_parse.rs  fuzz_roundtrip.rs  fuzz_typecheck.rs
frontend/fuzz/src/: gen.rs  lib.rs
frontend/src/: ast.rs  desugar.rs  diagnostics.rs  elaborate.rs  lexer.rs  lib.rs  lower.rs  parser.rs  pretty.rs  refinement.rs  specialized_circuit.rs  typecheck.rs  types.rs
frontend/src/analysis/: annotations.rs  completion_context.rs  cursor.rs  docs.rs  mod.rs  prelude_names.rs  resolution.rs  scopes.rs  signature.rs  symbols.rs  typed.rs
frontend/src/diagnostics/: fixes.rs
frontend/src/typecheck/: builtins.rs  circuit.rs  classical.rs  error.rs  exhaust.rs  linear.rs  mod.rs  monad.rs  obligation.rs  tests.rs  unify.rs
frontend/tests/: analysis_resolution.rs  audit_lexer.rs  circuits.rs  corpus.rs  desugar.rs  e2e_fixtures.rs  emit_qasm.rs  lexer.rs  linearity.rs  lower.rs  lsp_diagnostics.rs  parser.rs  pretty_roundtrip.rs  reference_algorithms.rs  roundtrip_props.proptest-regressions  roundtrip_props.rs  typecheck.rs  typecheck_props.rs  typed_program.rs  workspace.rs
frontend/tests/fixtures/: bell_state.qn  bernstein_vazirani.qn  error_correction.qn  grover.qn  ising.qn  (+4 more)
mlir_bridge/: Cargo.toml  build.rs
mlir_bridge/examples/: circ_roundtrip.rs  classical_region_fuse.rs  clifford_t_opt.rs  depth_schedule.rs  dynamic_roundtrip.rs  gate_cancel.rs  measurement_defer.rs  monadic_lower.rs  native_gate_decomp.rs  rotation_merge.rs  sabre_route.rs
mlir_bridge/fuzz/: Cargo.toml
mlir_bridge/src/: circ_extract.rs  diagnostics.rs  dynamic_walk.rs  fixed_physical.rs  lib.rs  metrics.rs  pipeline.rs  qec_collect.rs
mlir_bridge/tests/: circ_extract.rs  classical_region_fusion.rs  clifford_t_opt.rs  clifford_uncomputation.rs  depth_props.rs  depth_scheduling.rs  depth_scheduling_pass.rs  dialect.rs  dynamic.rs  dynamic_qubit_consumption.rs  dynamic_walk.rs  fixed_physical.rs  gate_cancellation.rs  linearity.rs  measurement_deferral.rs  metrics.rs  monadic_lowering.rs  native_gate_decomp.rs  pipeline.rs  prop_clifford_t_opt.rs  prop_compiler_uncomputation.rs  prop_gate_cancellation.rs  prop_rotation_merging.rs  prop_sabre_routing.rs  prop_zx_simplification.rs  quantum_circ.rs  rotation_merging.rs  sabre_routing.rs  workspace.rs  zx_simplification.rs
quon_core/: Cargo.toml
quon_core/fuzz/: Cargo.toml
quon_core/src/: depth.rs  gates.rs  lib.rs  linearity.rs  metrics.rs  optimization.rs  qasm.rs
quon_core/tests/: audit_depth_const.rs  audit_depth_parse.rs  audit_depth_subst.rs  audit_linearity.rs  audit_optimization.rs  depth_props.rs  linearity.rs  linearity_props.rs  metrics.rs
quon_lsp/: Cargo.toml
quon_lsp/src/: analysis.rs  convert.rs  diagnostics.rs  document.rs  format.rs  lib.rs  main.rs  server.rs  span.rs
quon_lsp/tests/: diagnostics.rs  document.rs  format.rs  handshake.rs  incremental_lsp.rs  intel_completion.rs  intel_definition.rs  intel_document_highlight.rs  intel_document_symbol.rs  intel_folding_range.rs  intel_hover.rs  intel_inlay_hint.rs  intel_references.rs  intel_rename.rs  intel_semantic_tokens.rs  smoke.rs  span_mapping.rs
quon_na/: Cargo.toml
quon_na/examples/: globalry_scaling.rs  na_roundtrip.rs  qec_ancilla_reuse.rs  repetition_code_toy.rs
quon_na/src/: compaction.rs  dialect.rs  entangling_schedule.rs  extract.rs  geometry.rs  graph.rs  layout.rs  lib.rs  lower.rs  matching.rs  movement.rs  native_gate_decomp.rs  naviz.rs  pipeline.rs  placement.rs  plan.rs  qec.rs  qec_schedule.rs  report.rs  schedule.rs  schedule_entry.rs  schedule_invariants.rs  schedule_view.rs  stats.rs  zoned.rs
quon_na/tests/: compaction.rs  compaction_props.rs  entangling_schedule_props.rs  extract_graph.rs  globalry_scaling_props.rs  interaction_graph.rs  measure_reset_reuse.rs  movement.rs  movement_props.rs  pipeline.rs  placement.rs  placement_props.rs  quantum_na_dialect.rs  report_snapshots.rs  schedule_from_graph_props.rs  stats_snapshots.rs
quon_qec/: Cargo.toml
quon_qec/src/: expand.rs  experiment.rs  family.rs  lattice_surgery.rs  lib.rs  patch_ops.rs  qldpc.rs  workload.rs
quon_qec/tests/: patch_ops.rs
quonc/: Cargo.toml
quonc/src/: compile.rs  lib.rs  main.rs  na_target.rs  qasm.rs  validation.rs  watch.rs
quonc/tests/: benchmark_suite.rs  cli.rs  lit.rs  metrics.rs  na_pipeline.rs  na_semantic_equivalence.rs  na_showcase.rs  na_stats_emit.rs  naviz_emit.rs  qasm_ingestion.rs  qec_experiment_emit.rs  qec_repetition_memory.rs  qec_surface_memory.rs  qec_validation.rs  rap_table_i.rs  regression.rs  samples_catalog.rs  smoke.rs  verify_na.rs  viz_showcase.rs  watch.rs
quonfmt/: Cargo.toml  README.md
quonfmt/src/: config.rs  doc.rs  error.rs  lib.rs  main.rs
quonfmt/tests/: app_forms.rs  ci_corpus_manifest.rs  cli.rs  compose_parens.rs  golden.rs  idempotency.rs  qec_ast_forms.rs
quonlint/: Cargo.toml
quonlint-cli/: Cargo.toml
quonlint-cli/src/: main.rs
quonlint-cli/tests/: cli.rs
quonlint/src/: config.rs  context.rs  diagnostic.rs  engine.rs  lib.rs  project.rs  reporter.rs  suppressions.rs
quonlint/tests/: corpus.rs  lsp_mapping.rs  rules.rs  type_app.rs
zx/fuzz/: Cargo.toml
(+692 files in other folders)
