[workspace]
members = ["quonc", "frontend", "zx", "mlir_bridge", "backend", "flux_verify"]
resolver = "2"

[workspace.dependencies]
# Frontend
chumsky  = "0.9"
z3       = "0.12"
thiserror = "1"
ariadne  = "0.4"   # span-aware error reporting, pairs with chumsky

# ZX graph
petgraph = "0.6"

# MLIR/LLVM (LLVM 22 required — set MLIR_SYS_220_PREFIX if not on PATH)
melior = "0.27"

# Backend
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Driver
clap = { version = "4", features = ["derive"] }

# Shared
anyhow = "1"

[profile.release]
lto = true
