[workspace]
members = [
    "quonc",
    "frontend",
    "zx",
    "mlir_bridge",
    "backend",
    "flux_verify",
    "quon_core",
    "quon_lsp",
]
resolver = "2"

[workspace.dependencies]
# Frontend
chumsky  = "0.13"
z3       = "0.12"
thiserror = "1"
ariadne  = "0.4"   # span-aware error reporting, pairs with chumsky

# ZX graph
petgraph = "0.6"

# MLIR/LLVM (LLVM 22 required — set MLIR_SYS_220_PREFIX if not on PATH)
melior = "0.27"

# Backend
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Refinement types (nightly-only checker; compiled into the build only behind
# a crate's `flux` feature, so the stable workspace build is unaffected)
flux-rs = { git = "https://github.com/flux-rs/flux.git" }

# Testing
proptest  = "1"
insta     = "1"
arbitrary = { version = "1", features = ["derive"] }

# Driver
clap = { version = "4", features = ["derive"] }

# Shared
anyhow = "1"

# LSP
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "io-std"] }
line-index = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
