[workspace]
members = [
    "quonc",
    "frontend",
    "zx",
    "mlir_bridge",
    "backend",
    "flux_verify",
    "quon_core",
    "quon_lsp",
    "quonfmt",
    "quonlint",
    "quonlint-cli",
    "quon_na",
    "quon_qec",
]
resolver = "2"

[workspace.dependencies]
# Frontend
chumsky  = "0.13"
z3       = "0.12"
thiserror = "1"
ariadne  = "0.4"   # span-aware error reporting, pairs with chumsky

# ZX graph
petgraph = "0.6"

# MLIR/LLVM (LLVM 22 required — set MLIR_SYS_220_PREFIX if not on PATH)
melior = "0.27"

# Backend
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Refinement types (nightly-only checker; compiled into the build only behind
# a crate's `flux` feature, so the stable workspace build is unaffected)
flux-rs = { git = "https://github.com/flux-rs/flux.git" }

# Testing
proptest  = "1"
insta     = "1"
arbitrary = { version = "1", features = ["derive"] }

# Driver
clap = { version = "4", features = ["derive", "color", "wrap_help", "env", "string"] }
notify = "7"
sha2 = "0.10"

# Shared
anyhow = "1"

# LSP
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "io-std"] }
line-index = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.87"
license-file = "LICENSE"
repository = "https://github.com/arniber21/quon"

[workspace.lints.rust]
unsafe_code = "allow"

[profile.release]
lto = true

# Build scripts default to opt-level 0, and cc-rs forwards that as -O0 to the
# C++ shims of tblgen/mlir-sys. Nix's gcc injects -D_FORTIFY_SOURCE, and glibc
# emits "#warning _FORTIFY_SOURCE requires compiling with optimization" at -O0,
# which tblgen's -Werror turns fatal. -O1 satisfies fortify on every profile.
[profile.dev.build-override]
opt-level = 1

[profile.release.build-override]
opt-level = 1
