[package]
name    = "backend"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
# Opt-in Flux refinement-type checking. Off by default so the stable
# workspace build never compiles `flux-rs`; enabled by `cargo flux -p backend
# --features flux` (nightly) in the Flux CI workflow.
flux = ["dep:flux-rs", "quon_qec/flux"]

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
quon_core  = { path = "../quon_core" }
quon_qec   = { path = "../quon_qec" }
flux-rs    = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
petgraph = { workspace = true } # independent shortest-path oracle for differential tests

[package.metadata.flux]
enabled = true
