[package]
name = "flux_verify"
version = "0.1.0"
edition = "2024"
publish = false
description = "Flux refinement-type examples and checks for the Quon workspace"

[package.metadata.flux]
enabled = true

[dependencies]
flux-rs = { git = "https://github.com/flux-rs/flux.git" }
quon_core = { path = "../quon_core" }
