[package]
name = "flux_verify"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false
description = "Flux refinement-type examples and checks for the Quon workspace"

[package.metadata.flux]
enabled = true

[dependencies]
flux-rs = { git = "https://github.com/flux-rs/flux.git" }
quon_core = { path = "../quon_core" }
quon_na = { path = "../quon_na", default-features = false }
