[package]
name    = "frontend"
version = "0.1.0"
edition = "2024"

[features]
default = ["full"]
full = ["dep:z3", "dep:quon_core", "dep:mlir_bridge", "dep:melior", "dep:anyhow"]

[dependencies]
chumsky   = { workspace = true }
thiserror = { workspace = true }
ariadne   = { workspace = true }
z3        = { workspace = true, optional = true }
anyhow    = { workspace = true, optional = true }
quon_core   = { path = "../quon_core", optional = true }
mlir_bridge = { path = "../mlir_bridge", optional = true }
melior      = { workspace = true, optional = true }

[dev-dependencies]
proptest    = { workspace = true }
insta       = { workspace = true }
melior      = { workspace = true }
mlir_bridge = { path = "../mlir_bridge" }
backend     = { path = "../backend" }
arbitrary   = { workspace = true }

[[example]]
name = "circ_lower"
path = "examples/circ_lower.rs"
required-features = ["full"]
