[package]
name    = "frontend"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = ["full"]
# `analyze`: the Melior-free frontend pipeline (parse → desugar → typecheck →
# elaborate → specialize). `specialized_circuit` and the analysis modules depend
# only on `quon_core` / `z3` — no `mlir_bridge` / `melior` — so specialization
# is buildable and testable without linking LLVM/MLIR (ADR-0038, issue #206).
analyze = ["dep:quon_core", "dep:z3"]
# `full`: the whole frontend including the `lower` → `quantum.circ` MLIR adapter,
# which pulls in `mlir_bridge` / `melior`. `quonc` / `quon_lsp` take this by
# default; `quonfmt` uses `default-features = false` (parser only).
full = ["analyze", "dep:mlir_bridge", "dep:melior", "dep:anyhow"]

[dependencies]
chumsky   = { workspace = true }
thiserror = { workspace = true }
ariadne   = { workspace = true }
z3        = { workspace = true, optional = true }
anyhow    = { workspace = true, optional = true }
quon_core   = { path = "../quon_core", optional = true }
mlir_bridge = { path = "../mlir_bridge", optional = true }
melior      = { workspace = true, optional = true }

[dev-dependencies]
proptest    = { workspace = true }
insta       = { workspace = true }
melior      = { workspace = true }
mlir_bridge = { path = "../mlir_bridge" }
backend     = { path = "../backend" }
quon_qec    = { path = "../quon_qec" }
arbitrary   = { workspace = true }

[[example]]
name = "circ_lower"
path = "examples/circ_lower.rs"
required-features = ["full"]

[lints]
workspace = true
