[package]
name    = "mlir_bridge"
version = "0.1.0"
edition = "2021"
build   = "build.rs"

[dependencies]
melior  = { workspace = true }
zx      = { path = "../zx" }
backend = { path = "../backend" }
anyhow  = { workspace = true }

[build-dependencies]
# melior's build script handles LLVM/MLIR linking.
# Set MLIR_SYS_220_PREFIX to your LLVM 22 install prefix if not on the default search path.
