[package]
name    = "mlir_bridge"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true
build   = "build.rs"

[dependencies]
melior    = { workspace = true }
mlir-sys  = "220"           # raw C API — used only at the diagnostics FFI boundary
zx        = { path = "../zx" }
backend   = { path = "../backend" }
quon_core = { path = "../quon_core" } # shared DepthExpr (MLIR-free)
quon_qec  = { path = "../quon_qec" }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[build-dependencies]
# melior's build script handles LLVM/MLIR linking.
# Set MLIR_SYS_220_PREFIX to your LLVM 22 install prefix if not on the default search path.

[lints]
workspace = true
