[package]
name    = "quon_core"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "MLIR-free shared types and invariant kernels for the Quon workspace"

[features]
# Opt-in Flux refinement-type checking. Off by default so the stable workspace
# build never compiles `flux-rs`; enabled by `cargo flux -p quon_core --features
# flux` (nightly) in the Flux CI workflow.
flux = ["dep:flux-rs"]

[dependencies]
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = "0.8"
flux-rs    = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }

[package.metadata.flux]
enabled = true
