[package]
name    = "quon_lsp"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "quon_lsp"
path = "src/main.rs"

[dependencies]
frontend           = { path = "../frontend" }
quonfmt            = { path = "../quonfmt" }
quonlint           = { path = "../quonlint" }
tower-lsp          = { workspace = true }
tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "io-std"] }
line-index         = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow             = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints.rust]
unsafe_code = "deny"
