[package]
name        = "quon_na"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "MLIR-free neutral-atom layout, schedule, and reporting types for Quon"

[features]
default = ["mlir"]
# Opt-in Flux refinement-type checking. Off by default so the stable workspace
# build never compiles `flux-rs`; enabled by `cargo flux -p quon_na
# --no-default-features --features flux` (nightly).
flux = ["dep:flux-rs", "backend/flux", "quon_qec/flux"]
mlir = ["dep:melior", "dep:mlir_bridge"]
# Opt-in exact SMT solver (issue #302): z3-backed optimal placement + state-prep
# scheduling. Mirrors frontend's `analyze` optional-z3 pattern (ADR-0038): the
# default build never links z3, so the stable workspace is unaffected.
solver = ["dep:z3"]

[dependencies]
backend     = { path = "../backend" }
flux-rs     = { workspace = true, optional = true }
melior      = { workspace = true, optional = true }
mlir_bridge = { path = "../mlir_bridge", optional = true }
quon_core   = { path = "../quon_core" }
quon_qec    = { path = "../quon_qec" }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
z3          = { workspace = true, optional = true }

[dev-dependencies]
insta    = { workspace = true }
proptest = { workspace = true }

[package.metadata.flux]
enabled = true

[[test]]
name = "quantum_na_dialect"
path = "tests/quantum_na_dialect.rs"
required-features = ["mlir"]

[[test]]
name = "extract_graph"
path = "tests/extract_graph.rs"
required-features = ["mlir"]

[[example]]
name = "na_roundtrip"
path = "examples/na_roundtrip.rs"
required-features = ["mlir"]

[[example]]
name = "repetition_code_toy"
path = "examples/repetition_code_toy.rs"
