[package]
name        = "quon_qec"
version     = "0.1.0"
edition     = "2024"
description = "MLIR-free QEC workload IR, code-family formulas, and experiment-facing types"

[features]
default = []
# Opt-in Flux refinement-type checking (nightly). Off by default so the stable
# workspace build never compiles flux-rs.
flux = ["dep:flux-rs"]

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
flux-rs    = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[package.metadata.flux]
enabled = true
