[package]
name        = "quon_qec"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "MLIR-free QEC workload IR and code-family sizing formulas"

[features]
default = []
# Opt-in Flux refinement-type checking (nightly). Off by default so the stable
# workspace build never compiles flux-rs.
flux = ["dep:flux-rs"]

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
flux-rs    = { workspace = true, optional = true }

[dev-dependencies]

[package.metadata.flux]
enabled = true

[lints.rust]
unsafe_code = "deny"
