[package]
name    = "quonc"
version = "0.1.0"
edition = "2024"

[lib]
name = "quonc"
path = "src/lib.rs"

[[bin]]
name = "quonc"
path = "src/main.rs"

[dependencies]
frontend    = { path = "../frontend" }
mlir_bridge = { path = "../mlir_bridge" }
backend     = { path = "../backend" }
quon_core   = { path = "../quon_core" }
quon_na     = { path = "../quon_na" }
quon_qec    = { path = "../quon_qec" }
melior      = { workspace = true }
clap        = { workspace = true }
anyhow      = { workspace = true }
ariadne     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
notify      = { workspace = true }
sha2        = { workspace = true }
anstyle     = "1"

[dev-dependencies]
tempfile = "3"
serde = { workspace = true }
serde_json = { workspace = true }
# serde_yaml is deprecated/archived upstream (RUSTSEC-2024-0320); serde_yaml_ng
# is the actively-maintained, API-compatible fork — aliased so call sites keep
# using `serde_yaml::...` unchanged. See ADR-0025.
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
quon_qec = { path = "../quon_qec" }
