[package]
name    = "quonfmt"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "quonfmt"
path = "src/main.rs"

[dependencies]
frontend = { path = "../frontend", default-features = false }
thiserror = { workspace = true }
clap      = { workspace = true }
anyhow    = { workspace = true }
ariadne   = { workspace = true }

[dev-dependencies]
insta     = { workspace = true }
proptest  = { workspace = true }
arbitrary = { workspace = true }
frontend  = { path = "../frontend", default-features = false }
