[package]
name    = "quonlint-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "quonlint"
path = "src/main.rs"

[dependencies]
quonlint  = { path = "../quonlint" }
clap      = { workspace = true }
anyhow    = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = { workspace = true }
