[package]
name    = "quonlint-cli"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "quonlint"
path = "src/main.rs"

[dependencies]
quonlint  = { path = "../quonlint" }
clap      = { workspace = true }
anyhow    = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = { workspace = true }

[lints.rust]
unsafe_code = "deny"
