[package]
name = "frontend-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Detached from the main workspace: fuzzing needs nightly + libfuzzer, which the stable
# workspace build must not pull in.
[workspace]
members = ["."]

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.frontend]
path = ".."

[lib]
path = "src/lib.rs"

[[bin]]
name = "fuzz_lex"
path = "fuzz_targets/fuzz_lex.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_typecheck"
path = "fuzz_targets/fuzz_typecheck.rs"
test = false
doc = false
bench = false
