[package]
name = "mlir_bridge-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Detached from the main workspace: fuzzing needs nightly + libfuzzer, which the
# stable workspace build must not pull in. Building still requires LLVM 22 / MLIR
# because the targets link `mlir_bridge` (set MLIR_SYS_220_PREFIX); the fuzzed
# code path itself — DepthExpr S-expression parsing — is pure Rust.
[workspace]
members = ["."]

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.mlir_bridge]
path = ".."

[[bin]]
name = "fuzz_depth_parse"
path = "fuzz_targets/fuzz_depth_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_depth_roundtrip"
path = "fuzz_targets/fuzz_depth_roundtrip.rs"
test = false
doc = false
bench = false
